--- a/hello-vue-router/package.json
+++ b/hello-vue-router/package.json
@@ -43,8 +43,13 @@
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
+    "vue-amap": "^0.5.8",
+    "vue-baidu-map": "^0.21.14",
     "vue-loader": "^13.3.0",
+    "vue-marquee": "^1.2.0",
+    "vue-py": "0.0.4",
     "vue-router": "^3.0.1",
+    "vue-seamless-scroll": "^1.1.16",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
